Lym proyecto 1/JavaCC/source/uniandes/lym/robot/control/Robot.java
/* Generated By:JavaCC: Do not edit this line. Robot.java */
package uniandes.lym.robot.control;

import uniandes.lym.robot.kernel.*;
import uniandes.lym.robot.view.Console;

import java.awt.Point;
import java.io.*;
import java.util.Vector;
import java.util.LinkedList;
import java.util.ArrayList;
import java.util.HashMap;
@SuppressWarnings("serial")
public class Robot implements RobotConstants {


        private RobotWorldDec world;


        void setWorld(RobotWorld w) {
                world = (RobotWorldDec) w;
        }

        String salida=new String();

        //boolean command(uniandes.lym.robot.view.Console sistema) :
  final public boolean command(Console sistema) throws ParseException {
                int x,y;
                salida=new String();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ROBOT:
      label_1:
      while (true) {
        jj_consume_token(ROBOT);
                               salida="Inicio del programa";
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case VARS:
          vars();
          break;
        default:
          jj_la1[0] = jj_gen;
          ;
        }
        jj_consume_token(PROCS);
        procs();
                                     salida="Proceso completado";
                    try {
                                 Thread.sleep(900);
                    } catch (InterruptedException e) {
                                        System.err.format("IOException: %s%n", e);
                            }

                        sistema.printOutput(salida);
                        {if (true) return true;}
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case ROBOT:
          ;
          break;
        default:
          jj_la1[1] = jj_gen;
          break label_1;
        }
      }
      break;
    case 0:
      jj_consume_token(0);
                 {if (true) return false;}
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public void vars() throws ParseException {
    jj_consume_token(VARS);
    jj_consume_token(VARIABLE);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 26:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_2;
      }
      jj_consume_token(26);
      jj_consume_token(VARIABLE);
    }
    jj_consume_token(27);
                                                       salida="Creacion de variables";
  }

  final public void procs() throws ParseException {
         Token varName;
        ArrayList<String> funciones = new ArrayList<String>();
        HashMap<String, String> cuerpofunciones = new HashMap<String, String>();
        Token cuerpo;
    varName = jj_consume_token(VARIABLE);
    jj_consume_token(28);
    body();
    jj_consume_token(29);
                                              funciones.add(varName.image);
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VARIABLE:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_3;
      }
      varName = jj_consume_token(VARIABLE);
      jj_consume_token(28);
      body();
      jj_consume_token(29);
                                               funciones.add(varName.image);
    }

  }

  final public void body() throws ParseException {
      Token newparam;
      Token cuerpo;
      ArrayList<String> parametros = new ArrayList<String>();
      HashMap<String, String> cuerpofunciones = new HashMap<String, String>();
    jj_consume_token(VARIABLEDEF);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VARIABLE:
      newparam = jj_consume_token(VARIABLE);
                                                     parametros.add(newparam.image);
      break;
    default:
      jj_la1[5] = jj_gen;
      ;
    }
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 26:
        ;
        break;
      default:
        jj_la1[6] = jj_gen;
        break label_4;
      }
      jj_consume_token(26);
      newparam = jj_consume_token(VARIABLE);
                                          parametros.add(newparam.image);
    }
    jj_consume_token(VARIABLEDEF);
                                  salida="Parametros del proceso";
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case goto1:
      case move:
      case turn:
      case face:
      case put:
      case pick:
        ;
        break;
      default:
        jj_la1[7] = jj_gen;
        break label_5;
      }
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case goto1:
        goto1();
        break;
      case move:
        move();
        break;
      case face:
        face();
        break;
      case turn:
        turn();
        break;
      case put:
        put();
        break;
      case pick:
        pick();
        break;
      default:
        jj_la1[8] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  final public void goto1() throws ParseException {
      int x,y ;
    jj_consume_token(goto1);
    jj_consume_token(30);
    x = num();
    jj_consume_token(26);
    y = num();
    jj_consume_token(27);
                 world.setPostion(x,y);salida="Comando cambio posicion" ;
  }

  final public void move() throws ParseException {
      int n;
    jj_consume_token(move);
    jj_consume_token(30);
    n = num();
    jj_consume_token(27);
                 world.moveForward(n,false);salida="Comando de mover hacia adelante";
  }

  final public void turn() throws ParseException {
      Token direction;
      String dirc;
    jj_consume_token(turn);
    jj_consume_token(30);
    direction = jj_consume_token(VARIABLE);
    jj_consume_token(27);
        salida=direction.image;
        if (direction.image.equals( "right"))
        {

          world.turnRight();
          salida= "se movio a la derecha";
         }
         else if (direction.image.equals( "left"))
         {
                        world.turnRight();
                        world.turnRight();
                        world.turnRight();
                        salida= "se movio a la izquierda";
           }
         else if (direction.image.equals( "around"))
         {
                        world.turnRight();
                        world.turnRight();
                        salida= "se movio alrededor";
           }
         else {
           {if (true) throw new Error ( "Direccion incorrecta" +direction.image);}
           }
  }

  final public void face() throws ParseException {
      Token orientation;
    jj_consume_token(face);
    jj_consume_token(30);
    orientation = jj_consume_token(VARIABLE);
    jj_consume_token(27);
        try {
                        world.changefacing(orientation.image);

          }
        catch(NumberFormatException ee)
                  {
                        {if (true) throw new Error ( "Orientacion incorrecta" );}

                    }
  }

  final public void put() throws ParseException {
      int n;
      Token object;
    jj_consume_token(put);
    jj_consume_token(30);
    n = num();
    jj_consume_token(26);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BALLOONS:
      object = jj_consume_token(BALLOONS);
      break;
    case CHIPS:
      object = jj_consume_token(CHIPS);
      break;
    default:
      jj_la1[9] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(27);
                  if (object.image.equals("Balloons"))
                  {
                    for ( int i=0; i<n;i++)
                        {
                         world.putBalloon();}
                    }
                  else if (object.image.equals("Chips"))
                  {
                    for ( int i=0; i<n;i++)
                        {
                         world.putChip();}
                    }
                  else {
                        {if (true) throw new Error ( "Objeto incorrecto" );}
                    }
  }

  final public void pick() throws ParseException {
      int n;
      Token object;
    jj_consume_token(pick);
    jj_consume_token(30);
    n = num();
    jj_consume_token(26);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case BALLOONS:
      object = jj_consume_token(BALLOONS);
      break;
    case CHIPS:
      object = jj_consume_token(CHIPS);
      break;
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(27);
                  if (object.image.equals("Balloons"))
                  {
                    for ( int i=0; i<n;i++)
                        {
                         world.pickupBalloon();}
                    }
                  else if (object.image.equals("Chips"))
                  {
                    for ( int i=0; i<n;i++)
                        {
                         world.pickupChip();}
                    }
                  else {
                        {if (true) throw new Error ( "Objeto incorrecto" );}
                    }
  }

  final public void jumpToThe() throws ParseException, Error {
          int x ;
          Token d;
    jj_consume_token(jumpToThe);
    jj_consume_token(30);
    x = num();
    jj_consume_token(26);
    d = jj_consume_token(VARIABLE);
    jj_consume_token(27);
            if (d.image.equals("right"))
            {
                        world.turnRight();
                        world.moveForward(x, true);
            }
            else if (d.image.equals("left"))
            {
                        world.turnRight();
                        world.turnRight();
                        world.turnRight();
                        world.moveForward(x, true);
            }
            else if (d.image.equals("back"))
            {
                        world.turnRight();
                        world.turnRight();
                        world.moveForward(x , true);
            }

                else if (d.image.equals("front"))
            {
                        world.moveForward(x, true);
                }
                else
                {
                        {if (true) throw new Error("Orientation does not exist!");}
                }
  }

  final public void moveInDir() throws ParseException, Error {
         Token direct;
         int n;
    jj_consume_token(moveInDir);
    jj_consume_token(30);
    n = num();
    jj_consume_token(26);
    direct = jj_consume_token(VARIABLE);
    jj_consume_token(27);
             if (direct.image.equals("North"))
             {
                 if(world.getFacing() == 0)
                 {
                   world.moveForward(n,false);
                 }
                 else if(world.getFacing() == 1)
                 {
                   world.turnRight();
                   world.turnRight();
                   world.moveForward(n,false);
                 }
                 else if(world.getFacing() == 2)
                 {
                   world.turnRight();
                   world.turnRight();
                   world.turnRight();
                   world.moveForward(n,false);
                 }
                 else if(world.getFacing() == 3)
                 {
                   world.turnRight();
                   world.moveForward(n,false);
                 }


             }
             else if (direct.image.equals("South"))
             {
                 if(world.getFacing() == 0)
                 {
                   world.turnRight();
                   world.turnRight();
                   world.moveForward(n,false);
                 }
                 else if(world.getFacing() == 1)
                 {
                   world.moveForward(n,false);
                 }
                 else if(world.getFacing() == 2)
                 {
                   world.turnRight();
                   world.turnRight();
                   world.moveForward(n,false);
                 }
                 else if(world.getFacing() == 3)
                 {
                   world.turnRight();
                   world.moveForward(n,false);
                 }
             }
             else if (direct.image.equals("West"))
             {
                 if(world.getFacing() == 0)
                 {
                        world.turnRight();
                        world.turnRight();
                        world.turnRight();
                   world.moveForward(n,false);
                 }
                 else if(world.getFacing() == 1)
                 {
                   world.turnRight();

                   world.moveForward(n,false);
                 }
                 else if(world.getFacing() == 2)
                 {
                   world.turnRight();
                   world.turnRight();
                   world.moveForward(n,false);
                 }
                 else if(world.getFacing() == 3)
                 {
                   world.moveForward(n,false);
                 }
             }
             else if (direct.image.equals("East"))
             {
                 if(world.getFacing() == 0)
                 {
                        world.turnRight();
                   world.moveForward(n,false);
                 }
                 else if(world.getFacing() == 1)
                 {
                   world.turnRight();
                   world.turnRight();
                   world.turnRight();
                   world.moveForward(n,false);
                 }
                 else if(world.getFacing() == 2)
                 {
                   world.moveForward(n,false);
                 }
                 else if(world.getFacing() == 3)
                 {
                   world.turnRight();
                   world.turnRight();
                   world.moveForward(n,false);
                 }

             }
             else
                {
                  {if (true) throw new Error("Cardinal direction does not exist!");}
                }
  }

  final public void moveToThe() throws ParseException, Error {
          int x ;
          Token d;
    jj_consume_token(moveToThe);
    jj_consume_token(30);
    x = num();
    jj_consume_token(26);
    d = jj_consume_token(VARIABLE);
    jj_consume_token(27);
            if (d.image.equals("right"))
            {
                        world.turnRight();
                        world.moveForward(x, false);
            }
            else if (d.image.equals("left"))
            {
                        world.turnRight();
                        world.turnRight();
                        world.turnRight();
                        world.moveForward(x, false);
            }
            else if (d.image.equals("back"))
            {
                        world.turnRight();
                        world.turnRight();
                        world.moveForward(x , false);
            }

                else if (d.image.equals("front"))
            {
                        world.moveForward(x, false);
                }
                else
                {
                        {if (true) throw new Error("Orientation does not exist!");}
                }
  }

  final public int num() throws ParseException, Error {
                int total=1;
    jj_consume_token(NUM);
                  try {
                                total= Integer.parseInt(token.image);
                    }
                  catch(NumberFormatException ee)
                  {
                        {if (true) throw new Error ( "Number out of bounds: "+token.image+ " !!" );}
                    }
                  {if (true) return total;}
    throw new Error("Missing return statement in function");
  }

  /** Generated Token Manager. */
  public RobotTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private int jj_gen;
  final private int[] jj_la1 = new int[11];
  static private int[] jj_la1_0;
  static {
      jj_la1_init_0();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x40,0x20,0x21,0x4000000,0x2000000,0x2000000,0x4000000,0x7e00,0x7e00,0x600000,0x600000,};
   }

  /** Constructor with InputStream. */
  public Robot(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public Robot(java.io.InputStream stream, String encoding) {
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new RobotTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 11; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 11; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public Robot(java.io.Reader stream) {
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new RobotTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 11; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 11; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public Robot(RobotTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 11; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(RobotTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 11; i++) jj_la1[i] = -1;
  }

  private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  private int jj_ntk() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  private int[] jj_expentry;
  private int jj_kind = -1;

  /** Generate ParseException. */
  public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[31];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 11; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 31; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  final public void enable_tracing() {
  }

  /** Disable tracing. */
  final public void disable_tracing() {
  }

}
